    * "append number": added "min length" and "pad with zeroes" args [Ralph]
    * "use door": added "fade screen" argument, so you can use a door without
      fading [Ralph]
    * "npc copy number" (opposite to "npc reference") [Ralph]
    * "create line", "slice is line", "get line color", "set line color" [Ralph]
    * "force mount vehicle", "current vehicle id", "current vehicle npc" [James]

  * Changes
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box
      appeared to work but actually the "After" tag condition didn't
      get set to "Always", although it claimed it was. It didn't actually
      get set to "Always" until you entered a submenu. The in-game F1
      textbox debug screen also showed "ALWAYS" instead of "NEVER"! [Ralph]
    * Fixed "delete_ScriptData" error when quitting after having stopped
      a script in the script debugger [Ralph]
    * "hero z" could incorrectly throw "invalid party slot" errors, but
      its argument is actually party caterpillar rank [Ralph]
    * The width of a Text slice didn't update after changing the text in the
      slice editor [Ralph]
    * Bad results if "scroll to child" was called twice in a row, or after the
      slice tree was modified, without a "wait" in-between [Ralph]
    * Fixed exporting a blank BMP file instead of a tileset or backdrop
      when you browse to pick a different export location other than
      the default. [James]
    * Fix a crash that happened when you used ellipse-related scripting
      commands on a non-ellipse slice [sotrain515, James]